# TuyaOpen

./: .gitignore  README.md  README_zh.md  requirements.txt
apps/tuya.ai/: README.md  README_zh.md
apps/tuya.ai/ai_components/ai_audio/src/: ai_audio_player.c
apps/tuya.ai/ai_components/ai_main/src/: ai_chat_ui.c
apps/tuya.ai/duo_eye_mood/src/: tuya_main.c
apps/tuya.ai/your_chat_bot/: CMakeLists.txt  Kconfig  README.md  README_zh.md  app_default.config
apps/tuya.ai/your_chat_bot/src/: tuya_main.c
apps/tuya.ai/your_chat_bot/src/display2/: CMakeLists.txt  Kconfig  app_ui_helper.c
apps/tuya.ai/your_chat_bot/src/display2/ui_wechat/screens/: ui_home.c
apps/tuya.ai/your_desk_emoji/: README.md  README_zh.md
apps/tuya.ai/your_desk_emoji/src/: tuya_main.c
apps/tuya.ai/your_otto_robot/: README_zh.md  app_default.config
apps/tuya.ai/your_otto_robot/config/: T5AI_OTTO_LCD_GC9D01.config
apps/tuya.ai/your_otto_robot/src/: tuya_main.c
apps/tuya.ai/your_otto_robot/src/otto_ninja/: otto_ninja_app_servo.c  otto_ninja_app_servo.h  otto_ninja_main.c
apps/tuya.ai/your_robot_dog/: README.md  README_zh.md
apps/tuya.ai/your_robot_dog/src/: tuya_main.c
apps/tuya.ai/your_serial_chat_bot/: README.md  README_zh.md
apps/tuya.ai/your_serial_chat_bot/src/: tuya_main.c
apps/tuya_cloud/: README.md  README_zh.md
apps/tuya_cloud/switch_demo/: .gitignore
apps/tuya_cloud/switch_demo/src/: tuya_config_secrets.h.example  tuya_main.c
apps/tuya_cloud/weather_get_demo/include/: tuya_config.h  tuya_config_secrets.h.example
apps/tuya_cloud/weather_get_demo/src/: tuya_main.c
apps/tuya_t5_pixel/tuya_t5_pixel_weather/src/: tuya_main.c
apps/tuya_t5_pocket/tuya_t5_pocket_ai/: CMakeLists.txt
apps/tuya_t5_pocket/tuya_t5_pocket_ai/config/: TUYA_LINUX_LVGL_SIMULATOR.config
apps/tuya_t5_pocket/tuya_t5_pocket_ai/src/: game_pet.c  tuya_main.c
apps/tuya_t5_pocket/tuya_t5_pocket_ai/src/display/ui/: ai_chat_screen.c  camera_screen.c  camera_screen.h  main_screen.c  rfid_scan_screen.c  rfid_scan_screen.h  screen_manager.c  screen_manager.h
boards/: add_new_board.md
boards/LINUX/Ubuntu/: Kconfig
boards/T5AI/T5AI_OTTO/: Kconfig  t5ai_otto.c
boards/T5AI/TUYA_T5AI_POCKET/: tuya_t5ai_pocket.c
examples/graphics/lvgl_demo/: README_zh.md
examples/graphics/lvgl_gif/: README.md
examples/graphics/lvgl_simulator/: CMakeLists.txt  README_en.md  README_zh.md  sim_config.cmake  sim_main.c.in
examples/graphics/lvgl_simulator/include/: tuya_kconfig.h
platform/: platform_config.yaml
src/audio_player/src/datasink/: datasink_url.c
src/libhttp/include/: http_session.h
src/libhttp/src/: http_session.c
src/liblvgl/: CMakeLists.txt  Kconfig
src/liblvgl/simulator/: CMakeLists.txt  Kconfig
src/liblvgl/simulator/include/: lvgl_sim.h
src/liblvgl/simulator/src/: lvgl_sim.c
src/liblvgl/v9/conf/: lv_conf.h
src/liblvgl/v9/lvgl/src/core/: lv_obj_event.c  lv_obj_tree.c
src/liblvgl/v9/lvgl/src/misc/: lv_timer.c
src/liblvgl/v9/lvgl/src/stdlib/: lv_mem.c
src/tal_cli/src/: cli_cmd.c
src/tal_system/include/: tal_event_info.h
src/tuya_cloud_service/cloud/: tuya_device_timer.c  tuya_iot.c
tools/kconfiglib/: CMakeLists.txt
